--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
     "date-fns": "^2.12.0",
     "fingerprintjs2": "^2.1.0",
     "qs": "^6.9.4",
